--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,123 +26,304 @@
         android:divider="@color/gray"
         android:dividerHeight="1dp" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_playing"
+    <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:gravity="center_vertical"
+        android:visibility="gone" />
+
+    <ViewSwitcher
+        android:id="@+id/view_switcher"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:padding="10dp"
-        android:background="@drawable/border_corner"
         android:visibility="visible">
 
-        <ImageView
-            android:id="@+id/imv_pull_down"
-            android:layout_width="50dp"
+        <LinearLayout
+            android:id="@+id/layout_playing_collapsed"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_pull_down"
-            android:visibility="gone"
-            tools:ignore="MissingConstraints" />
+            android:layout_gravity="bottom"
+            android:padding="10dp"
+            android:background="@drawable/border_corner"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:visibility="visible">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imv_image_playing"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@color/gray"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_logo"
-            android:layout_marginTop="5dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:shapeAppearanceOverlay="@style/Circle"
-            tools:ignore="MissingConstraints" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imv_image_playing"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center_vertical"
+                android:background="@color/gray"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_logo"
+                app:shapeAppearanceOverlay="@style/Circle"/>
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Title of song"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:textAlignment="textStart"
-            android:ellipsize="end"
-            android:maxLines="1"
-            app:layout_constraintStart_toEndOf="@id/imv_image_playing"
-            app:layout_constraintEnd_toStartOf="@id/imv_previous"
-            app:layout_constraintTop_toTopOf="parent"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_artist"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Artist of song"
-            android:textSize="14dp"
-            android:textAlignment="textStart"
-            android:ellipsize="end"
-            android:maxLines="1"
-            app:layout_constraintStart_toEndOf="@id/imv_image_playing"
-            app:layout_constraintEnd_toStartOf="@id/imv_previous"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-        <!-- Action buttons on the right -->
-        <ImageView
-            android:id="@+id/imv_previous"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/ic_previous"
-            app:layout_constraintEnd_toStartOf="@id/imv_play"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/tv_artist"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imv_play"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_play"
-            app:layout_constraintEnd_toStartOf="@id/imv_next"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/tv_artist"/>
+                        <TextView
+                            android:id="@+id/tv_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:text="Title of song"
+                            android:textSize="18dp"
+                            android:textStyle="bold"
+                            android:ellipsize="end"
+                            android:maxLines="1"/>
 
-        <ImageView
-            android:id="@+id/imv_next"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/ic_next"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/tv_artist"/>
+                        <TextView
+                            android:id="@+id/tv_artist"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:text="Artist of song"
+                            android:textSize="14dp"
+                            android:ellipsize="end"
+                            android:maxLines="1"/>
 
-        <!-- SeekBar and Time TextViews on the bottom -->
-        <TextView
-            android:id="@+id/tv_position"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginLeft="5dp"
-            android:text="00:00"
-            android:textSize="14dp"
-            app:layout_constraintStart_toStartOf="@id/tv_title"
-            app:layout_constraintTop_toBottomOf="@id/tv_artist"/>
+                    </LinearLayout>
 
-        <SeekBar
-            android:id="@+id/seekBar"
-            android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:max="100"
-            app:layout_constraintStart_toEndOf="@id/tv_position"
-            app:layout_constraintEnd_toStartOf="@id/tv_duration"
-            app:layout_constraintTop_toBottomOf="@id/tv_artist"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
 
-        <TextView
-            android:id="@+id/tv_duration"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginRight="5dp"
-            android:text="00:00"
-            android:textSize="14dp"
-            app:layout_constraintEnd_toEndOf="@id/imv_next"
-            app:layout_constraintTop_toBottomOf="@id/tv_artist"/>
+                        <ImageView
+                            android:id="@+id/imv_previous"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:background="@drawable/ic_previous"
+                            android:text="Play"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                        <ImageView
+                            android:id="@+id/imv_play"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:src="@drawable/ic_play"
+                            android:text="Play"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"/>
+
+                        <ImageView
+                            android:id="@+id/imv_next"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:background="@drawable/ic_next"
+                            android:text="Play"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:paddingHorizontal="5dp"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/tv_position"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="00:00"
+                        android:textSize="14dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"/>
+
+                    <SeekBar
+                        android:id="@+id/seekBar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:max="100"
+                        android:paddingVertical="5dp"/>
+
+                    <TextView
+                        android:id="@+id/tv_duration"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="00:00"
+                        android:textSize="14dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_playing_expand"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:background="@drawable/border_corner"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/imv_pull_down"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_pull_down"
+                android:visibility="visible"
+                tools:ignore="DuplicateIds,MissingConstraints" />
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Title of song"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:ellipsize="end"
+                android:maxLines="1"
+                tools:ignore="DuplicateIds" />
+
+            <TextView
+                android:id="@+id/tv_artist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Artist of song"
+                android:textSize="14dp"
+                android:ellipsize="end"
+                android:textAlignment="center"
+                android:maxLines="1"
+                tools:ignore="DuplicateIds" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imv_image_playing"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginVertical="10dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/gray"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_logo"
+                app:shapeAppearanceOverlay="@style/Circle"
+                tools:ignore="DuplicateIds" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:id="@+id/imv_previous"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@drawable/ic_previous"
+                        android:text="Play"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"
+                        tools:ignore="DuplicateIds" />
+
+                    <ImageView
+                        android:id="@+id/imv_play"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_play"
+                        android:text="Play"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"
+                        tools:ignore="DuplicateIds" />
+
+                    <ImageView
+                        android:id="@+id/imv_next"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@drawable/ic_next"
+                        android:text="Play"
+                        android:textSize="16sp"
+                        android:textColor="@color/white"
+                        tools:ignore="DuplicateIds" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingHorizontal="5dp"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/tv_position"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="00:00"
+                        android:textSize="14dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        tools:ignore="DuplicateIds" />
+
+                    <SeekBar
+                        android:id="@+id/seekBar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:max="100"
+                        android:paddingVertical="5dp"
+                        tools:ignore="DuplicateIds" />
+
+                    <TextView
+                        android:id="@+id/tv_duration"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="00:00"
+                        android:textSize="14dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        tools:ignore="DuplicateIds" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ViewSwitcher>
+
 
 </RelativeLayout>
