--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -89,8 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:paddingVertical="10dp"
-            android:paddingHorizontal="5dp"
+            android:padding="5dp"
             android:background="@drawable/border_gradient"
             android:orientation="horizontal"
             android:gravity="center_vertical"
@@ -121,6 +120,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
@@ -149,7 +149,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -157,26 +157,26 @@
                             android:layout_width="35dp"
                             android:layout_height="35dp"
                             android:background="@drawable/ic_previous"
-                            android:layout_gravity="center_vertical"
+                            android:layout_gravity="bottom"
                             android:text="Play"
                             android:textSize="16sp"
                             android:textColor="@color/white"/>
 
                         <ImageView
                             android:id="@+id/imv_play"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_gravity="center_vertical"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:layout_gravity="bottom"
                             android:background="@drawable/ic_play"
                             android:text="Play"
-                            android:textSize="16sp"
-                            android:textColor="@color/white"/>
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
 
                         <ImageView
                             android:id="@+id/imv_next"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:layout_gravity="center_vertical"
+                            android:layout_gravity="bottom"
                             android:background="@drawable/ic_next"
                             android:text="Play"
                             android:textSize="16sp"
@@ -184,9 +184,9 @@
 
                         <ImageView
                             android:id="@+id/imv_cancel"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:background="@drawable/ic_delete"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:background="@drawable/ic_cancel"
                             android:text="Play"
                             android:textSize="16sp"
                             android:textColor="@color/white"/>
@@ -199,6 +199,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
+                    android:layout_marginBottom="5dp"
                     android:gravity="center">
 
                     <TextView
@@ -234,7 +235,7 @@
                     <ImageView
                         android:id="@+id/imv_repeat"
                         android:layout_width="30dp"
-                        android:layout_height="35dp"
+                        android:layout_height="30dp"
                         android:background="@drawable/ic_unrepeat"
                         android:text="Repeat"
                         android:textSize="16sp"
