--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="5dp"
+    android:background="@color/gray"
     tools:context=".screen.homeFragment.HomeFragment">
 
     <LinearLayout
@@ -62,9 +63,10 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/layout_search"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:divider="@null"
         android:dividerHeight="10dp"
         android:paddingHorizontal="10dp" />
