--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#FF0000FF</color>
+    <color name="blue2">#3C3CFF</color>
     <color name="red">#FF0000</color>
     <color name="gray">#EAEAEA</color>
     <color name="gray2">#C5C5C5</color>
