--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -56,7 +56,7 @@
             android:layout_marginVertical="20dp">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/item_image"
+                android:id="@+id/imv_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
