--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -62,7 +62,7 @@
             android:layout_marginVertical="20dp">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/item_image"
+                android:id="@+id/imv_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
@@ -70,7 +70,7 @@
                 app:shapeAppearanceOverlay="@style/Circle" />
 
             <ImageView
-                android:id="@+id/imv_edit"
+                android:id="@+id/imv_camera"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentRight="true"
